Fix form container margin alignment

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ border-radius: 5px;
 .form-container{
   max-width: 600px;
   margin-top: 20px;
-  margin-left:320px;
+  margin-left:-320px;
   background: #17175c;
   padding: 20px;
   border-radius: 15px;
